@@ -10,3 +10,4 @@
 ./test5.cpp
 ./test6.cpp
 ./test7.cpp
+./WindowReport.cpp
