@@ -3,6 +3,7 @@ OBJ_LIST = \
 ../wintest-obj/DrawAlgo.o \
 ../wintest-obj/DrawArt.o \
 ../wintest-obj/FileReport.o \
+../wintest-obj/WindowReport.o \
 ../wintest-obj/main.o \
 ../wintest-obj/test1.o \
 ../wintest-obj/test2.o \
@@ -18,6 +19,7 @@ ASM_LIST = \
 ../wintest-obj/DrawAlgo.s \
 ../wintest-obj/DrawArt.s \
 ../wintest-obj/FileReport.s \
+../wintest-obj/WindowReport.s \
 ../wintest-obj/main.s \
 ../wintest-obj/test1.s \
 ../wintest-obj/test2.s \
@@ -33,6 +35,7 @@ DEP_LIST = \
 ../wintest-obj/DrawAlgo.dep \
 ../wintest-obj/DrawArt.dep \
 ../wintest-obj/FileReport.dep \
+../wintest-obj/WindowReport.dep \
 ../wintest-obj/main.dep \
 ../wintest-obj/test1.dep \
 ../wintest-obj/test2.dep \
@@ -59,6 +62,9 @@ include $(RULES_FILE)
 	$(CC) $(CCOPT) $< -o $@
 
 ../wintest-obj/FileReport.o : ./FileReport.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+../wintest-obj/WindowReport.o : ./WindowReport.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 ../wintest-obj/main.o : ./main.cpp
@@ -99,6 +105,9 @@ include $(RULES_FILE)
 ../wintest-obj/FileReport.s : ./FileReport.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+../wintest-obj/WindowReport.s : ./WindowReport.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 ../wintest-obj/main.s : ./main.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -136,6 +145,9 @@ include $(RULES_FILE)
 
 ../wintest-obj/FileReport.dep : ./FileReport.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FileReport.o $< -MF $@
+
+../wintest-obj/WindowReport.dep : ./WindowReport.cpp
+	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/WindowReport.o $< -MF $@
 
 ../wintest-obj/main.dep : ./main.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/main.o $< -MF $@
