@@ -1,0 +1,29 @@
+/* WindowReport.cpp */ 
+//----------------------------------------------------------------------------------------
+//
+//  Project: CCore 1.09
+//
+//  Tag: General
+//
+//  License: Boost Software License - Version 1.0 - August 17th, 2003 
+//
+//            see http://www.boost.org/LICENSE_1_0.txt or the local copy
+//
+//  Copyright (c) 2015 Sergey Strukov. All rights reserved.
+//
+//----------------------------------------------------------------------------------------
+ 
+//#include <CCore/inc/video/WindowReport.h>
+#include "WindowReport.h"
+ 
+namespace CCore {
+namespace Video {
+
+/* class WindowReport */
+
+
+
+} // namespace Video
+} // namespace CCore
+ 
+
